# Unicorn

./: .gitignore  CMakeLists.txt  README.md
orz/: main.cpp
orz/assembler/: assembler.cpp  assembler.h  defines.h  elf.h  includes.h
orz/linker/: linker.h
src/: Evalvisitor.cpp  Evalvisitor.h  Main.java  defines.h  elf.h  includes.h  main.cpp  riscv.h
src/Parser/: assembly.g4  assembly.interp  assembly.tokens  assemblyBaseListener.java  assemblyBaseVisitor.java  assemblyLexer.java  assemblyListener.java  assemblyParser.java  assemblyVisitor.java
src/Util/: error.java  position.java
src/assembler/: assembler.cpp  assembler.h  defines.h  includes.h  parser.cpp  parser.h
